✨ feat: 로그 메시지 출력